// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Component should render TextInput 1`] = `
<input
  className="input"
  type="text"
/>
`;

exports[`TextInput Component should render TextInput with props 1`] = `
<input
  className="input"
  name="Kakarot"
  type="text"
  value="Goku"
/>
`;
